--- a/src/app/role-management/rolemgmt-sidenav/rolemgmt-sidenav.template.html
+++ b/src/app/role-management/rolemgmt-sidenav/rolemgmt-sidenav.template.html
@@ -6,12 +6,14 @@
     <h2 class = "min_txt">General Services Administration</h2>
   </div>
   <div class = "m_T-1em">
-    <div class = "pull-left filter-color">
-      <h3>Filters</h3>
+    <div class = "filter-color">
+      <h3>Filters
+        <div class = "pull-right filter-icon filter-color">
+          <i class="fa fa-sliders" aria-hidden="true"></i>
+        </div>
+      </h3>
     </div>
-    <div class = "pull-right filter-icon filter-color">
-      <i class="fa fa-sliders fa-2x" aria-hidden="true"></i>
-    </div>
+
     <div>
       <sam-autocomplete
         name="'users-search'"
