--- a/src/styles/components/role-management/_role-sidenav.scss
+++ b/src/styles/components/role-management/_role-sidenav.scss
@@ -3,11 +3,10 @@
     margin-top: 5em;
   }
   .filter-icon{
-    margin-top: 1.65em;
     padding-right: 0.5em;
   }
-  .def-filter{
-    padding-top: 3em;
+  .filter-title {
+    margin-top: .2em;
   }
   .filter-color{
     color: #0071bc;
