--- a/src/styles/components/role-management/_rolemgmt-sidenav.scss
+++ b/src/styles/components/role-management/_rolemgmt-sidenav.scss
@@ -2,11 +2,8 @@
   .m_T-5em {
     margin-top: 5em;
   }
-  .filter-icon{
-    padding-right: 0.5em;
-  }
   .def-filter{
-    padding-top: 3em;
+    padding-top: .2em;
   }
   .filter-color{
     color: #0071bc;
