Integrated search header

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -3,38 +3,7 @@
 <div [style.height]="!isHeaderWithSearch ? '22px' : '0'">&nbsp;</div>
 <alertHeader></alertHeader>
 
-<samSearchHeader #searchheader *ngIf="isHeaderWithSearch" [filterValue]="index" (searchEvent)="onHeaderSearchEvent($event)">
-  <div header-links>
-    <SamHeaderLinks (onDropdownToggle)="toggleOverlay($event)"></SamHeaderLinks>
-  </div>
-  <div header-searchbar>
-    <samSearchbar #searchbar
-      [size]="'small'" 
-      [keyword]="keyword"
-      (onSearch)="onHeaderSearchEvent($event)"
-      [(filterValue)]="index"
-      [selectConfig]="searchSelectConfig">
-      <div custom-input>
-        <!--samInputAutocomplete 
-          [serviceName]="'suggestions'"
-          [index]="index"
-          (searchTermEmit)="searchbar.callSearch($event)"
-          [searchTerm]="keyword"
-          (keyEnterEmit)="searchbar.onSearchClick()">
-        </samInputAutocomplete-->
-        <sam-autocomplete autofill-suggestions 
-          [(ngModel)]="keyword" 
-          (ngModelChange)="searchbar.callSearch($event);searchbar.onSearchClick();"
-          [index]="index" 
-          [showClearButton]="true"
-          [allowAny]="true"
-          name="appsearch" ></sam-autocomplete>
-      </div>
-    </samSearchbar>
-  </div>
-</samSearchHeader>
-
-<samHeader *ngIf="!isHeaderWithSearch" (headerDropdownControl)="toggleOverlay($event)">
+<samHeader (headerDropdownControl)="toggleOverlay($event)">
   <div header-links>
     <SamHeaderLinks>
       <div class="search-bar" search-bar>
@@ -45,12 +14,13 @@
           [(filterValue)]="index"
           [selectConfig]="searchSelectConfig">
           <div custom-input>
-            <samInputAutocomplete
-              [serviceName]="'suggestions'"
-              [index]="index"
-              (searchTermEmit)="searchbar.callSearch($event)"
-              (keyEnterEmit)="searchbar.onSearchClick()">
-            </samInputAutocomplete>
+            <sam-autocomplete autofill-suggestions 
+              [(ngModel)]="keyword" 
+              (ngModelChange)="searchbar.callSearch($event);searchbar.onSearchClick();"
+              [index]="index" 
+              [showClearButton]="true"
+              [allowAny]="true"
+              name="appsearch" ></sam-autocomplete>
           </div>
         </samSearchbar>
       </div>
