--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -5,11 +5,16 @@
 
 .sam-autocomplete {
   display: inline-block;
-  overflow: hidden;
+  overflow: visible;
   width: 100%;
+  max-width: 46rem;
 
   .input-container {
     position: relative;
+
+    input {
+      margin: 0;
+    }
   }
 
   .add-on {
@@ -26,8 +31,11 @@
     padding: 1rem 0.7em;
     margin: 0.2em 0;
     border: 1px solid $color-black;
-    position: relative;
-    background: $color-white;
+    position: absolute;
+    top: 4.4rem;
+    left: 0;
+    z-index: 999;
+    background-color: $color-white;
 
     li {
       position: relative;
