--- a/src/styles/pages/_aac-request.scss
+++ b/src/styles/pages/_aac-request.scss
@@ -24,4 +24,15 @@
     margin-top: 0;
     z-index: 1050;
   }
+
+  .aac-request-confirm-div{
+    text-align: center;
+  }
+
+  .aac-request-alert-message{
+    position: absolute;
+    width: 450px;
+    right: 0;
+    top: 95%;
+  }
 }
