--- a/src/app/organization-detail/AAC-request/AAC-request.template.html
+++ b/src/app/organization-detail/AAC-request/AAC-request.template.html
@@ -66,12 +66,12 @@
       <div class="usa-width-one-whole aac-address-section">
         <samAddrForm  [orgAddrModel]="mailAddr" [showAddIcon]="false" [showCloseIcon]="false"></samAddrForm>
       </div>
-      <div class="usa-width-one-whole aac-address-section relative m_T-2x" *ngIf="isBillingAddrRequired()">
+      <div class="usa-width-one-whole aac-address-section relative m_T-2x" *ngIf="isAddrTypeRequired('Billing Address')">
         <samCheckbox class="aac-address-duplicate-fill-cbx" (modelChange)="onDuplicateFillChecked('Billing Address', $event)" [(model)]="billingAddrFillCbxModel" [name]="duplicateAddrCbxConfig.name" [options]="duplicateAddrCbxConfig.options" [label]="''" [errorMessage]="''" [hasSelectAll]="false">
         </samCheckbox>
         <samAddrForm  [orgAddrModel]="billAddr" [showAddIcon]="false" [showCloseIcon]="false" [hideAddrForm]="hideBillingForm"></samAddrForm>
       </div>
-      <div class="usa-width-one-whole aac-address-section relative m_T-2x" *ngIf="isShippingAddrRequired()">
+      <div class="usa-width-one-whole aac-address-section relative m_T-2x" *ngIf="isAddrTypeRequired('Shipping Address')">
         <samCheckbox class="aac-address-duplicate-fill-cbx" (modelChange)="onDuplicateFillChecked('Shipping Address', $event)" [(model)]="shippingAddrFillCbxModel" [name]="duplicateAddrCbxConfig.name" [options]="duplicateAddrCbxConfig.options" [label]="''" [errorMessage]="''" [hasSelectAll]="false">
         </samCheckbox>
         <samAddrForm  [orgAddrModel]="shipAddr" [showAddIcon]="false" [showCloseIcon]="false" [hideAddrForm]="hideShippingForm"></samAddrForm>
@@ -120,7 +120,20 @@
         <span class="usa-width-two-thirds p_T-2x p_B-1x">{{address.street1}}<br>{{address.street2}}<br>{{address.city}}, {{address.state}}&nbsp;{{address.postalCode}}<br>{{address.country}}</span>
       </p>
     </div>
-    <button class="usa-button-primary p_R-4x p_L-4x pull-right">Confirm</button>
+    <button class="usa-button-primary p_R-4x p_L-4x pull-right" (click)="onSubmitFormClick()">Confirm</button>
     <button class="usa-button-outline p_R-6x p_L-4x pull-right" (click)="onEditFormClick()"><i class="fa fa-arrow-left"></i>Edit</button>
   </div>
+
+  <!--After confirmation, show the thank you note-->
+  <div class="usa-width-one-half aac-request-confirm-div" *ngIf="requestIsConfirm">
+      <h2 class="p_T-6x">Thank you.</h2>
+      <p>Your AAC request has been sent to administrator. What would you like to do next?</p>
+      <p>
+        <span><i class="fa fa-paper-plane"></i>&nbsp;&nbsp;<a href="/aac-request">Submit another AAC request</a></span><br>
+        <span><i class="fa fa-home"></i>&nbsp;&nbsp;<a routerLink="/">Return to SAM.gov Home</a></span><br>
+      </p>
+  </div>
+
+  <samAlert *ngIf="successAlertMsg" class="aac-request-alert-message" [showClose]="true" [type]="'success'" [title]="'Success'" [description]="'Your AAC Request has been submitted'"></samAlert>
+
 </section>
