--- a/src/app/organization-detail/create-org/create-org.template.html
+++ b/src/app/organization-detail/create-org/create-org.template.html
@@ -6,7 +6,7 @@
     <form class="usa-width-one-whole create-org-form-section create-org-basic-section" [formGroup]="basicInfoForm">
       <samText #orgName [required]='true' [control]="basicInfoForm.get('orgName')" formControlName="orgName" [name]="'orgName-input'" [label]="'Organization Name'"></samText>
       <labelWrapper #orgStartDateWrapper class="usa-width-one-half" [label]="'Start Date'" [name]="'start-date'" [required]="true">
-        <samDate (valueChange)="setOrgStartDate($event)" [label]="'Start Date'" name='start-date'></samDate>
+        <samDate (valueChange)="setOrgStartDate($event)" [label]="''" name='start-date'></samDate>
       </labelWrapper>
       <samTextArea #orgDescription class="usa-width-one-whole" [control]="basicInfoForm.get('orgDescription')" formControlName="orgDescription" [label]="'Description'" name='description' [placeholder]="'Provide a description for your organization and its function.'"></samTextArea>
       <samText #orgShortName class="usa-width-one-whole" [control]="basicInfoForm.get('orgShortName')" formControlName="orgShortName" [name]="'orgShortName-input'" [label]="'Short Name'"></samText>
@@ -89,5 +89,4 @@
     <button class="usa-button-primary p_R-4x p_L-4x pull-right" (click)="onConfirmFormClick()">Confirm</button>
     <button class="usa-button-outline p_R-6x p_L-4x pull-right" (click)="onEditFormClick()"><i class="fa fa-arrow-left"></i>Edit</button>
   </div>
-
 </section>
