Fix text bugs and remove links

--- a/src/app/entity/entity-object-view.page.html
+++ b/src/app/entity/entity-object-view.page.html
@@ -22,7 +22,7 @@
 			<div class="usa-grid-full">
 				<h1>{{coreData.legalBusinessName}}</h1>
 			</div>
-			<div class="usa-grid-full">
+			<div class="usa-grid-full bottom-border padding-bottom-10px">
 				<div class="usa-width-one-half">
 					<strong>DUNS: </strong>{{coreData.generalInfo.duns}}
 					<br />
@@ -43,24 +43,6 @@
 						<br />
 						<strong>Delinquent Federal Debt?: </strong>{{coreData.delinquentFedDebtFlag}}
 					</p>
-				</div>
-			</div>
-			<br />
-			<div class="usa-grid-full bottom-border">
-				<div class="usa-width-one-sixth padding-bottom-10px">
-					<a href="">Registration</a>
-				</div>
-				<div class="usa-width-one-sixth">
-					<a href="">Hierarchy</a>
-				</div>
-				<div class="usa-width-one-sixth">
-					<a href="">Opportunities</a>
-				</div>
-				<div class="usa-width-one-sixth">
-					<a href="">Awards</a>
-				</div>
-				<div class="usa-width-one-sixth">
-					<a href="">Exclusions</a>
 				</div>
 			</div>
 			<div class="usa-grid-full padding-top-10px">
@@ -84,7 +66,7 @@
 				<br />
 				<strong>Business Types</strong>
 				<br />
-				<i>Check the registrant's Reps &amp; Certs, if present, under FAR 52.212-3 or FAR 52.219-1 to determine if the entity is on SAB-certified HUBZone small business concern
+				<i>Check the registrant's Reps &amp; Certs, if present, under FAR 52.212-3 or FAR 52.219-1 to determine if the entity is on SBA-certified HUBZone small business concern.
 				Additional small business information may be found in the  <a>SBA's Dynamic Small Business Search</a> if the entity completed the SBA supplemental pages during
 				registration.</i>
 				<br />
