--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -41,7 +41,7 @@
             <h1><span class="field" id="program-title">{{program?.data?.title}}</span></h1>
           </div>
           <div class="usa-width-one-third">
-            <a *ngIf="cookieValue" (click)="onEditClick(['/programs', program.id, 'edit'])">
+            <a *ngIf="cookieValue" (click)="onEditClick(['header-information'])">
               Edit
               <i class="fa fa-pencil fal-edit" aria-hidden="true"></i>
             </a>
@@ -81,7 +81,7 @@
           <h2 id="overview">Overview</h2>
         </div>
         <div class="usa-width-one-third">
-          <a *ngIf="cookieValue" (click)="onEditClick(['/programs',program.id, 'edit', 'overview'])">
+          <a *ngIf="cookieValue" (click)="onEditClick(['overview'])">
             Edit
             <i class="fa fa-pencil fal-edit" aria-hidden="true"></i>
           </a>
@@ -124,7 +124,7 @@
           <h2 id="authorizations">Authorizations</h2>
         </div>
         <div class="usa-width-one-third">
-          <a *ngIf="cookieValue" (click)="onEditClick(['/programs',program.id, 'edit', 'authorization'])">
+          <a *ngIf="cookieValue" (click)="onEditClick(['authorization'])">
             Edit
             <i class="fa fa-pencil fal-edit" aria-hidden="true"></i>
           </a>
@@ -150,7 +150,7 @@
           <h2 id="financial-information">Financial Information</h2>
         </div>
         <div class="usa-width-one-third">
-          <a *ngIf="cookieValue" (click)="onEditClick(['/programs',program.id, 'edit', 'financial-information', 'obligations'])">
+          <a *ngIf="cookieValue" (click)="onEditClick(['financial-information', 'obligations'])">
             Edit
             <i class="fa fa-pencil fal-edit" aria-hidden="true"></i>
           </a>
@@ -199,7 +199,7 @@
           <h2 id="criteria-for-applying">Criteria for Applying</h2>
         </div>
         <div class="usa-width-one-third">
-          <a *ngIf="cookieValue" (click)="onEditClick(['/programs',program.id, 'edit', 'criteria-information'])">
+          <a *ngIf="cookieValue" (click)="onEditClick('criteria-information')">
             Edit
             <i class="fa fa-pencil fal-edit" aria-hidden="true"></i>
           </a>
@@ -490,7 +490,7 @@
           <h2 id="compliance-requirements">Compliance Requirements</h2>
         </div>
         <div class="usa-width-one-third">
-          <a *ngIf="cookieValue" (click)="onEditClick(['/programs',program.id, 'edit', 'compliance-requirements'])">
+          <a *ngIf="cookieValue" (click)="onEditClick(['compliance-requirements'])">
             Edit
             <i class="fa fa-pencil fal-edit" aria-hidden="true"></i>
           </a>
@@ -644,7 +644,7 @@
           <h2 id="contact-information">Contact Information</h2>
         </div>
         <div class="usa-width-one-third">
-          <a *ngIf="cookieValue" (click)="onEditClick(['/programs',program.id, 'edit', 'contact-information'])">
+          <a *ngIf="cookieValue" (click)="onEditClick(['contact-information'])">
             Edit
             <i class="fa fa-pencil fal-edit" aria-hidden="true"></i>
           </a>
