--- a/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
+++ b/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
@@ -12,11 +12,11 @@
           <h3>Requests</h3>
           <div>
             <span class="badge-primary">{{escalatedCount}}</span>
-            <a>Escalated Requests</a>
+            <a (click)="onEscalatedClick()">Escalated Requests</a>
           </div>
           <div class="m_T-2x">
             <span class="badge-primary">{{pendingCount}}</span>
-            <a>Pending Requests</a>
+            <a (click)="onPendingClick()">Pending Requests</a>
           </div>
         </div>
         <div class="usa-width-one-third">
@@ -26,16 +26,6 @@
           </div>
           <div>
             <a>Office of Management and Budget</a>
-          </div>
-          <div>
-            <ul class="usa-unstyled-list">
-              <a>Office of Family Assistance</a>
-              <li>
-                <ul class="usa-unstyled-list">
-                  <li><a>Some Org Under OFA</a></li>
-                </ul>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
@@ -52,7 +42,7 @@
       <div>
         <h2>Access Management
           <div class="pull-right">
-            <strong class="sort-label">Sort</strong>
+            <strong class="sort-label">Sort (Requested Date)</strong>
             <samSelect
               class="sort-options"
               [(model)]="selectModel"
@@ -120,6 +110,10 @@
                   <div><strong>Escalation Date</strong></div>
                   <div>{{formatDate(content.updatedDate)}}</div>
                 </div>
+                <div class="usa-width-one-third">
+                  <div><strong>Escalated To</strong></div>
+                  <div>---</div>
+                </div>
               </ng-container>
 
               <!-- Rejected -->
@@ -157,7 +151,30 @@
           </div>
 
           <samAccordion>
-            <samAccordionSection [name]="'comments'" [headerText]="'Comments'"></samAccordionSection>
+            <samAccordionSection [name]="'comments'" [headerText]="'Comments'">
+              <section class="comment-section" *ngIf="content.requestorMessage">
+                <div class="comment-user-icon">
+                  <i class="fa fa-user"></i>
+                </div>
+                <div class="comment-user-name">
+                  <strong>Requestor said:</strong>
+                </div>
+                <div class="comment">
+                  {{content.requestorMessage}}
+                </div>
+              </section>
+              <section class="comment-section" *ngIf="content.adminMessage">
+                <div class="comment-user-icon">
+                  <i class="fa fa-user"></i>
+                </div>
+                <div class="comment-user-name">
+                  <strong>Admin said:</strong>
+                </div>
+                <div class="comment">
+                  {{content.adminMessage}}
+                </div>
+              </section>
+            </samAccordionSection>
           </samAccordion>
           <samAccordion *ngIf='content.status.toLowerCase() === "approved"' class="details-accordion">
             <samAccordionSection [name]="'details'" [headerText]="'Details'">
