duns filter working minus persistence

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -211,7 +211,7 @@
               [showClearButton]="true">
             </sam-autocomplete>
 
-            <sam-list-display
+            <sam-list-display #dunsListDisplay
               class="usa-award-filter"
               [config]="testConfiguration"
               [newValue]="dunsModel"
