--- a/src/styles/components/role-management/_rolemgmt-sidenav.scss
+++ b/src/styles/components/role-management/_rolemgmt-sidenav.scss
@@ -2,11 +2,8 @@
   .m_T-5em {
     margin-top: 5em;
   }
-  .filter-icon{
-    padding-right: 0.5em;
-  }
   .def-filter{
-    padding-top: 3em;
+    padding-top: .2em;
   }
   .filter-color{
     color: #0071bc;
@@ -28,6 +25,7 @@
     font-size: 2.5rem;
     margin-bottom: 0em;
     margin-top: .5em;
+    text-align: center;
   }
   .icn_pos{
     position: absolute;
@@ -36,5 +34,15 @@
   .p_B-1em{
     padding-bottom: 1em;
     cursor: pointer;
+  }
+
+  .usa-accordion-content {
+    padding-left: 0.3rem;
+  }
+
+  samAccordion {
+    button {
+      text-align: center;
+    }
   }
 }
