--- a/src/styles/pages/_search.scss
+++ b/src/styles/pages/_search.scss
@@ -68,4 +68,24 @@
       z-index: 20;
     }
     }
+
+  .usa-regional-filter {
+
+    margin:0;
+
+    #regional-office {
+      border-radius: 1rem;
+      text-indent: 10px;
+      padding-right: 28px;
+      font-size: initial;
+    }
+    .add-on {
+      position: absolute;
+      top:20%;
+      left:5px;
+      z-index: 10;
+      color: #d9d9d9;
+      width:10px;
+    }
+  }
 }
